# pyproject

./: .env  .gitignore  Dockerfile  docker-compose.yaml
nginx/: nginx.conf
prod/: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
prod/mysite/mysite/: settings.py
prod/mysite/shopapp/: forms.py
prod/mysite/shopapp/templates/shopapp/: shop-index.html
